# microWM

./: CMakeLists.txt  microWM.cpp  test.cpp
modules/: EWMHManager.cpp  EWMHManager.h  SocketUnix.cpp  SocketUnix.h  XCBEventsManager.cpp  XCBEventsManager.h  configurationWindow.cpp  configurationWindow.h  display.cpp  display.h  displayInfo.cpp  displayInfo.h  log.cpp  log.h  logManager.cpp  logManager.h  textUtil.cpp  textUtil.h  window.cpp  window.h  xcbManager.cpp  xcbManager.h
